--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@emotion/css",
-  "version": "11.1.3",
+  "name": "@bumbag/emotion-css",
+  "version": "11.1.3-1",
   "description": "The Next Generation of CSS-in-JS.",
-  "main": "dist/emotion-css.cjs.js",
-  "module": "dist/emotion-css.esm.js",
+  "main": "dist/bumbag-emotion-css.cjs.js",
+  "module": "dist/bumbag-emotion-css.esm.js",
   "types": "types/index.d.ts",
   "files": [
     "src",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.0.0",
-    "@emotion/cache": "^11.1.3",
+    "@emotion/cache": "npm:@bumbag/emotion-cache@11.1.3-1",
     "@emotion/serialize": "^1.0.0",
     "@emotion/sheet": "^1.0.0",
     "@emotion/utils": "^1.0.0"
@@ -50,7 +50,7 @@
   "bugs": {
     "url": "https://github.com/emotion-js/emotion/issues"
   },
-  "umd:main": "dist/emotion-css.umd.min.js",
+  "umd:main": "dist/bumbag-emotion-css.umd.min.js",
   "preconstruct": {
     "umdName": "emotion",
     "entrypoints": [
