--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@emotion/react",
-  "version": "11.1.5",
-  "main": "dist/emotion-react.cjs.js",
-  "module": "dist/emotion-react.esm.js",
+  "name": "@bumbag/emotion-react",
+  "version": "11.1.5-2",
+  "main": "dist/bumbag-emotion-react.cjs.js",
+  "module": "dist/bumbag-emotion-react.esm.js",
   "browser": {
-    "./dist/emotion-react.cjs.js": "./dist/emotion-react.browser.cjs.js",
-    "./dist/emotion-react.esm.js": "./dist/emotion-react.browser.esm.js"
+    "./dist/bumbag-emotion-react.cjs.js": "./dist/bumbag-emotion-react.browser.cjs.js",
+    "./dist/bumbag-emotion-react.esm.js": "./dist/bumbag-emotion-react.browser.esm.js"
   },
   "types": "types/index.d.ts",
   "files": [
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.2",
-    "@emotion/cache": "^11.1.3",
+    "@emotion/cache": "npm:@bumbag/emotion-cache@11.1.3-1",
     "@emotion/serialize": "^1.0.0",
     "@emotion/sheet": "^1.0.1",
     "@emotion/utils": "^1.0.0",
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
-    "@emotion/css": "11.1.3",
+    "@bumbag/emotion-css": "11.1.3",
     "@emotion/css-prettifier": "1.0.0",
     "@emotion/server": "11.0.0",
     "@emotion/styled": "11.1.5",
@@ -62,7 +62,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "umd:main": "dist/emotion-react.umd.min.js",
+  "umd:main": "dist/bumbag-emotion-react.umd.min.js",
   "preconstruct": {
     "entrypoints": [
       "./index.js",
